--- a/react-wasm/www/index.html
+++ b/react-wasm/www/index.html
@@ -2,10 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Hello wasm-pack!</title>
   </head>
   <body>
     <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
+    <div id="root"></div>
     <script src="./bootstrap.js"></script>
   </body>
 </html>
